added styling to profile amd report

--- a/app/assets/stylesheets/customer.css
+++ b/app/assets/stylesheets/customer.css
@@ -38,3 +38,88 @@
   border-radius: 10px;
   padding: 5px 10px;
 }
+
+.report-container {
+  margin-top: 3%;
+  margin-left: 26%;
+  margin-bottom: 3%;
+  width: 40%;
+  padding: 10px 10px 20px 70px;
+  border-radius: 13px;
+  -webkit-box-shadow: 2px 29px 210px 66px rgba(212, 177, 74, 1);
+  -moz-box-shadow: 2px 29px 210px 66px rgba(212, 177, 74, 1);
+  box-shadow: 2px 2px 20px 6px rgba(3, 3, 3, 0.671);
+}
+
+.report-title {
+  margin-left: 36%;
+}
+
+.report-date {
+  margin-left: 40px;
+}
+.reportDate-button {
+  background-color: rgb(28, 163, 28);
+  color: white;
+  width: 100px;
+  height: 30px;
+  padding: 5px;
+  border-radius: 10px;
+  margin-left: 5%;
+}
+
+.report-remark {
+  margin-left: 14%;
+}
+
+.Order-wiseReport {
+  margin-top: 2%;
+  margin-left: 15%;
+  margin-bottom: 3%;
+  width: 65%;
+  padding: 10px 10px 20px 70px;
+  border-radius: 13px;
+  -webkit-box-shadow: 2px 29px 210px 66px rgba(212, 177, 74, 1);
+  -moz-box-shadow: 2px 29px 210px 66px rgba(212, 177, 74, 1);
+  box-shadow: 2px 2px 20px 6px rgba(3, 3, 3, 0.671);
+}
+
+.Order-reportList {
+  display: flex;
+  list-style-type: none;
+}
+
+.Order-reportList li {
+  margin: 0px;
+  width: 240px;
+  font-size: 20px;
+}
+
+.report-Ordertitle {
+  margin-left: 40%;
+}
+
+.report-OrderCost {
+  margin-left: 40%;
+}
+
+.OrderItem-wiseReport {
+  margin-top: 2%;
+  margin-left: 26%;
+  margin-bottom: 10%;
+  width: 40%;
+  padding: 10px 10px 20px 70px;
+  border-radius: 13px;
+  -webkit-box-shadow: 2px 29px 210px 66px rgba(212, 177, 74, 1);
+  -moz-box-shadow: 2px 29px 210px 66px rgba(212, 177, 74, 1);
+  box-shadow: 2px 2px 20px 6px rgba(3, 3, 3, 0.671);
+}
+
+.Orderitem-reportlist {
+  width: 100px;
+  text-align: center;
+}
+
+.ReportItem-table {
+  margin-left: 20%;
+}
