corrected spelling mistake

--- a/app/views/menus/edit.html.erb
+++ b/app/views/menus/edit.html.erb
@@ -10,12 +10,12 @@
 </div>
 
   <%= render partial: "edit_menu", locals:{
-  menus:MenuItem.description("south indian",@menu),
+  menus:MenuItem.description("South indian",@menu),
   section_title: "South Indian"
   } %>
 
   <%= render partial: "edit_menu", locals:{
-  menus:MenuItem.description("north indian",@menu),
+  menus:MenuItem.description("North indian",@menu),
   section_title: "North Indian"
   } %>
 
