--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,7 +74,7 @@
 
     <%= yield %>
 <div class="footer">
-  <p>© 2020 BeachView.  All rights reserved</p>
+  <p>© 2020 BeachView.  All Rights Reserved</p>
   <div style="display:flex">
    <a href="#" class="insta-icon"></a>
    <a href="#" class="fb-icon"></a>
