--- a/app/views/menu_items/_menus.html.erb
+++ b/app/views/menu_items/_menus.html.erb
@@ -11,19 +11,15 @@
                   <h3> <%= item.name%><span style="margin: 10px 0px; color:white;" >Rs.<%=item.price %></span></h3>
                   <span><%=item.description%></span>
                   <%if user_role == "user"%>
-                     <% order = Order.current_order(@current_user)%>
-                     <%if order==nil%>
-                      <%order= Order.create!(user_id: @current_user.id,
-                                    date: Date.today,
-                                    status: "not placed")%>
+                      <% order = Order.current_order(@current_user)%>
+                      <%if order == nil%>
+                       <%order= Order.check_order(order,@current_user)%>
                       <%end%>
                   <%elsif user_role == "clerk"%>
                      <% order = Order.current_order(@customer)%>
                      <%if order==nil%>
-                      <%order= Order.create!(user_id: @customer.id,
-                                    date: Date.today,
-                                    status: "not placed")%>
-                      <%end%>
+                     <%order= Order.check_order(order,@customer)%>
+                     <%end%>
                   <% end %>
                      <% orderitem = OrderItem.find_by(order_id: order.id, menu_item_id: item.id) if order%>
                      <%if orderitem%>
