last commit of today

--- a/app/assets/stylesheets/customer.css
+++ b/app/assets/stylesheets/customer.css
@@ -80,7 +80,7 @@
 
 .Order-wiseReport {
   margin-top: 2%;
-  margin-left: %;
+  margin-left: 200px;
   margin-bottom: 3%;
   width: 65%;
   padding: 10px 10px 20px 70px;
