--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -12,4 +12,4 @@
     section_title: "Billing clerk"
 }%>
 
-<p class="remark">(*click on the name to view the delivered orders of that customer. orders of walk-in customers are in clerk's)</p>
+<p class="Report-remark">(*click on the name to view the delivered orders of that customer. orders of walk-in customers are in clerk's)</p>
