--- a/app/assets/stylesheets/order_item.css
+++ b/app/assets/stylesheets/order_item.css
@@ -97,3 +97,14 @@ body {
 .Cart-link :hover {
   background-color: lawngreen;
 }
+
+.close {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  right: 0%;
+  padding: 12px 16px;
+  transform: translate(0%, -50%);
+}
+
+.close:hover {background: #bbb;}
