--- a/app/assets/stylesheets/customer.css
+++ b/app/assets/stylesheets/customer.css
@@ -140,12 +140,13 @@
 
 .Profile-Order {
   margin-left: 35%;
+  margin-top: 5%;
 }
 
 .Profile-OrderContainer {
   border-radius: 13px;
   width: 60%;
-  margin-left: 17%;
+  margin-left: 19%;
   padding-top: 3%;
   padding-bottom: 3%;
   margin-top: 5%;
