--- a/app/views/menu_items/index.html.erb
+++ b/app/views/menu_items/index.html.erb
@@ -99,6 +99,7 @@
        <div class="cart-detail">
 
         <div class="box">
+         <h2>Cart</h2>
             <table class="Cart-DislpayTable">
                <tr>
                  <th class="OrderItem-element">Name</th>
