--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,6 +1,74 @@
 <h1 class="OrderItem-heading"> Order Details <%=@order.id%> </h1>
-<%= render partial: "show_order",locals:{
-    order_items: @order_items,
-    order: @order,
-    user_role: @current_user.role
-}%>
+
+<div class="Orderid-wrapper">
+
+   <table class="Order-table">
+
+      <tr class="OrderItem-container">
+         <th class="OrderItem-element">Item:   </th>
+         <th class="OrderItem-element">Price  :</th>
+         <th class="OrderItem-element"> Qty : </th>
+         <th class="OrderItem-element"> sum :  </th>
+      </tr>
+
+      <%order_items.each do |item|%>
+
+        <tr class="OrderItem-container">
+          <td class="OrderItem-element"><%= item.menu_item_name %>  </td>
+          <td class="OrderItem-element"><%= item.menu_item_price%>   </td>
+          <td class="OrderItem-element"> <%=item.quantity%></td>
+          <td class="OrderItem-element"> <%= (item.menu_item_price * item.quantity) %> </td>
+        </tr>
+
+      <%end%>
+
+    </table>
+
+    <p class= <%= "OrderItem-cost" =%> > Order cost =
+      <% sum = 0%>
+
+      <% order_items.each do |item|%>
+         <% sum = sum + (item.menu_item_price * item.quantity) %>
+      <%end%>
+
+      <%= sum %>
+
+    </p>
+
+    <div class="Repeat-Order">
+  
+      <%= link_to "Back To All Orders" , url_for(:back), class: 'OrderItem-extra' %>
+
+      <%if user_role == "user"%>
+
+          <% order2 = Order.current_order(@current_user)%>
+
+          <%if order2 == nil%>
+
+            <%order2= Order.check_order(@current_user)%>
+
+          <%end%>
+              
+      <%elsif user_role == "clerk"%>
+
+          <% order2 = Order.current_order(@customer)%>
+
+          <%if order2 == nil%>
+
+           <%order2= Order.check_order(@customer)%>
+
+          <%end%>    
+
+      <% end %>
+
+      <% if user_role != "owner"%>
+
+        <%= form_with(url: repeat_order_path(id1:order.id , id2:order2.id), method: :post) do %>
+            <%= button_tag 'Repeat Order',type:'submit', class: 'RepeatOrder-button'%>
+        <% end %>
+
+      <%end%>
+
+   </div>
+
+</div>
