--- a/app/views/menu_items/index.html.erb
+++ b/app/views/menu_items/index.html.erb
@@ -63,7 +63,7 @@
 
 <%end%>
 
-<div class= <%=(@current_user.role != "owmner" ) ? "cart-container": "cartContainer" %> >
+<div class= <%=(@current_user.role != "owner" ) ? "cart-container": "cartContainer" %> >
   <div class="Display-Element">
     <h3 class="Menu-Head"><em>Displaying   <%= @menu.name%></em></h3>
     <%= render partial: "menus", locals:{
