--- a/app/assets/stylesheets/menu_items.css
+++ b/app/assets/stylesheets/menu_items.css
@@ -79,7 +79,7 @@ body {
   border-radius: 20px/50px;
   background-clip: padding-box;
   text-align: center;
-  background-color: white;
+  background-color: #C6CDD3;
   -webkit-box-shadow: 2px 29px 210px 66px rgba(212, 177, 74, 1);
   -moz-box-shadow: 2px 29px 210px 66px rgba(212, 177, 74, 1);
   box-shadow: 2px 2px 20px 6px rgba(3, 3, 3, 0.671);
