--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
             <a href="https://www.facebook.com/" class="fb-icon"></a>
             <%= link_to "About Us","/about"%>
             <%= link_to "Sign-Out" ,destroy_session_path, method:"delete"%>
-            <%= link_to  @current_user.name, user_path(id:@current_user.id),class:"user-icon"%>
+            <a class="user-icon" href="/users/#{@current_user.id}" style="padding-left:50px;"> <%= @current_user.name%> </a>
             <%= link_to "My Orders", orders_path %>
             <%= link_to "My Cart", order_items_path %>
             <%= link_to "Menus", menu_items_path %>
@@ -32,7 +32,6 @@
             <a href="#" class="insta-icon"></a>
             <a href="#" class="fb-icon"></a>
             <%= link_to "About Us","/about"%>
-
             <%= link_to "Sign-Out" ,destroy_session_path, method:"delete"%>
             <%= link_to "All Orders" ,orders_path%>
             <%= link_to "My Cart", order_items_path %>
