--- a/app/assets/stylesheets/home.css.erb
+++ b/app/assets/stylesheets/home.css.erb
@@ -161,6 +161,37 @@
   height: 46px;
 }
 
+.sign-out-icon{
+   background-image: url(<%=asset_path"icons8-sign-out-48"%>);
+  background-repeat: no-repeat;
+  height: 100%;
+  margin-top: 1px;
+  padding-left:50px;
+  padding-right: 5px;
+  height: 46px;
+}
+
+.cart-icon{
+   background-image: url(<%=asset_path"icons8-shopping-cart-48"%>);
+  background-repeat: no-repeat;
+  height: 100%;
+  margin-top: 1px;
+  padding-left:50px;
+  padding-right: 5px;
+  height: 46px;
+} 
+
+.order-icon{
+   background-image: url(<%=asset_path"icons8-order-history-48"%>);
+  background-repeat: no-repeat;
+  height: 100%;
+  margin-top: 1px;
+  padding-left:50px;
+  padding-right: 5px;
+  height: 46px;
+}
+
+
 .footer {
    position: fixed;
    left: 0;
