--- a/app/views/menus/edit.html.erb
+++ b/app/views/menus/edit.html.erb
@@ -12,40 +12,40 @@
   </div>
 
   <%= render partial: "edit_menu", locals:{
-  menus:MenuItem.description("South Indian",@menu),
+  menus:MenuItem.description("South Indian",@edit_menu),
   section_title: "South Indian"
   } %>
 
   <%= render partial: "edit_menu", locals:{
-  menus:MenuItem.description("North Indian",@menu),
+  menus:MenuItem.description("North Indian",@edit_menu),
   section_title: "North Indian"
   } %>
 
   <%= render partial: "edit_menu", locals:{
-  menus:MenuItem.description("Starters",@menu),
+  menus:MenuItem.description("Starters",@edit_menu),
   section_title: "Starters"
 
   } %>
 
   <%= render partial: "edit_menu", locals:{
-  menus:MenuItem.description("Briyani",@menu),
+  menus:MenuItem.description("Briyani",@edit_menu),
   section_title: "Briyani"
 
   } %>
 
   <%= render partial: "edit_menu", locals:{
-  menus:MenuItem.description("Rice And Noodles",@menu),
+  menus:MenuItem.description("Rice And Noodles",@edit_menu),
   section_title: "Rice And Noodles"
 
   } %>
 
   <%= render partial: "edit_menu", locals:{
-  menus:MenuItem.description("Tandoori",@menu),
+  menus:MenuItem.description("Tandoori",@edit_menu),
   section_title: "Tandoori"
   } %>
 
   <%= render partial: "edit_menu", locals:{
-  menus:MenuItem.description("Milk Shakes",@menu),
+  menus:MenuItem.description("Milk Shakes",@edit_menu),
   section_title: "Milk Shakes"
   } %>
 
